마이페이지 ing

--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -252,7 +252,11 @@
 
     /* 회원가입 */
     .btn-type-a {height:40px;border-radius:4px;font-size:16px;padding:0 20px}
-    .join-area .error-massage .error-data {padding-left:170px;font-size:16px}
+    .write-area .error-massage .error-data {padding-left:170px;font-size:16px}
+    .write-area .box-massage {padding-left:170px}
+    .box-massage .box-checkbox-a label {font-size:16px}
+    .box-massage .box-checkbox-a .point-color,
+    .box-massage .txt-a {font-size:15px}
     .agree-title .box-checkbox-a label {font-size:16px}
     .agree-area .btn-folding {height:32px;border-radius:16px;padding:0 12px;font-size:14px}
     .agree-area .btn-folding:after {width:4px;height:4px;border-width:1px 1px 0 0}
@@ -261,6 +265,7 @@
     /* form */
     .form-item .form-col-a {width:100px}
     .form-item label {font-size:20px}
+    .form-item .box-safe {height:40px;border-radius:6px;line-height:40px;display:block}
     .form-item .input-a {height:40px;border-radius:6px}
     .form-item .form-col-c {width:160px}
     .form-item .input-a {font-size:16px}
@@ -515,7 +520,11 @@
     .form-item label {font-size:16px}
     .form-item ~ .form-item {margin-top:8px}
     .form-item .form-col-c {width:120px}
-    .join-area .error-massage .error-data {padding-left:120px;font-size:14px}
+    .write-area .error-massage .error-data {padding-left:120px;font-size:14px}
+    .write-area .box-massage {padding-left:120px}
+    .box-massage .box-checkbox-a label {font-size:14px}
+    .box-massage .box-checkbox-a .point-color,
+    .box-massage .txt-a {font-size:13px}
     .form-item .form-col-txt {font-size:16px}
     .form-item .form-col-select {width:140px}
 
@@ -566,12 +575,13 @@
 }
 @media (max-width:600px) {
     /* 회원가입 */
-    .join-area .form-item {display:block}
-    .join-area .form-item > [class^="form-col-"] {display:block;width:100%}
-    .join-area .form-item > [class^="form-col-"] + [class^="form-col-"] {margin-top:8px}
-    .join-area .error-massage .error-data {padding-left:0}
-    .join-area .form-col-select {padding-left:0 !important}
-    .join-area .form-col-select .form-select {width:100%}
+    .write-area .form-item {display:block}
+    .write-area .form-item > [class^="form-col-"] {display:block;width:100%}
+    .write-area .form-item > [class^="form-col-"] + [class^="form-col-"] {margin-top:8px}
+    .write-area .error-massage .error-data,
+    .write-area .box-massage {padding-left:0}
+    .write-area .form-col-select {padding-left:0 !important}
+    .write-area .form-col-select .form-select {width:100%}
     .agree-area .agree-item {padding-left:0}
     .agree-area .agree-all {border-bottom:1px dashed #d5d6d7}
     .agree-area .active .agree-content {max-height:300px}
@@ -614,6 +624,9 @@
     .content-item-btn button {font-size:15px}
     .content-item-btn .btn-talk::before {width:24px;height:24px;position:relative;top:-2px;margin-right:2px}
     .box-btns .leave {position:static;margin:20px 24px 0;border-top:1px dashed #ddd;padding-top:12px;text-align:right}
+    .btn-area-a {display:flex;padding:0 24px}
+    .btn-area-a [class^="btn-type-"] {min-width:1px;flex:1}
+    .btn-area-a [class^="btn-type-"] ~ [class^="btn-type-"] {margin-left:6px}
 }
 @media (max-width:510px) {
     .ui-modal-cont .leader-list {padding:0 10px}
