--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -349,10 +349,10 @@
 .login-area .form-item label {font-size:28px}
 
 /* join */
-.join-area { max-width:880px;margin:0 auto}
+.write-area { max-width:880px;margin:0 auto}
 .error-massage {color:#946b3e;font-size:18px}
-.join-area .error-massage .error-data {padding-left:230px;margin-top:8px;display:block}
-.join-area .btn-gold.big {max-width:585px;margin:40px auto 0;display:block}
+.write-area .error-massage .error-data {padding-left:230px;margin-top:8px;display:block}
+.write-area .btn-gold.big {max-width:585px;margin:40px auto 0;display:block}
 .agree-area {margin-top:40px;border-top:1px solid #d5d6d7;padding-top:40px}
 .agree-area .agree-all {padding-bottom:12px}
 .agree-area .agree-item {padding-left:38px;margin-top:12px}
@@ -409,7 +409,7 @@
 .form-item .input-a:-ms-input-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .input-a:-moz-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .form-textarea {border:2px solid #eee;border-radius:8px;height:200px;width:100%;padding:12px;font-size:21px;font-weight:500;outline:none;color:#565656;box-sizing:border-box;resize:none}
-.form-item .box-safe {margin-left:8px;height:54px;padding:0 32px;font-size:18px;color:#222;border-radius:8px;text-align:center;line-height:54px;letter-spacing:4px;background-color:#eee;display:inline-block}
+.form-item .box-safe {margin-left:8px;height:54px;padding:0 32px;font-size:18px;color:#222;border-radius:8px;text-align:center;line-height:54px;letter-spacing:4px;background-color:#eee;display:inline-block;font-weight:600}
 
 /* 마이페이지 */
 .box-list-a {max-width:1500px;margin:0 auto}
@@ -450,6 +450,11 @@
 .btn-area-a {margin-top:20px;font-size:0;text-align:center}
 .btn-area-a [class^="btn-type-"] ~ [class^="btn-type-"] {margin-left:10px}
 .btn-area-a [class^="btn-type-"] {min-width:120px;text-align:center}
+.write-area .box-massage {padding-left:230px;margin-top:8px;display:block}
+.box-massage .box-checkbox-a label {font-size:18px}
+.box-massage .box-checkbox-a .point-color {color:#e40b0b;font-size:16px}
+.box-massage .txt-a {color:#514635;font-size:16px}
+
 
 /* 검색 */
 .search-area {max-width:1500px;margin:0 auto 28px}
