--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -56,6 +56,7 @@
 
     /* 검색 */
     .search-area {padding:0 24px}
+    .tbl-base{width:calc(100% - 48px); margin:0 24px;}
 
  }
 @media (max-width:1400px) {
@@ -192,6 +193,12 @@
 
     .tab-link{margin:0 0 20px;}
     .tab-link a{font-size:20px; padding:14px 20px 10px; box-shadow:0 5px 10px rgba(0,0,0,.2); border-radius:30px; height:60px; margin:0 5px;}
+
+    /* table */
+    .tbl-base{border-radius:15px; padding:0 20px}
+    .tbl-base thead th{font-size:16px; padding:10px 0}
+    .tbl-base th, 
+    .tbl-base td{font-size:14px; padding:10px 10px}
 }
 @media (max-width:1100px) {
     .tab-link{margin-top:20px;}
@@ -562,7 +569,21 @@
     .paging button.on{border-radius:50%; background:#c39863; color:#fff;}
     .paging button{font-size:3vmin; width:7vmin; height:7vmin; margin:0 1vmin;display:inline-block; line-height: 3.3vmin; vertical-align: top;}
 
+    .tbl-base thead{display:none;}
+    .tbl-base table,
+    .tbl-base tbody,
+    .tbl-base tbody tr{display:block; width:100%;}
+    .tbl-base tr:first-child{border:0}
+    .tbl-base tr{padding:10px 0; border-top:1px solid #d5d6d7}
+    .tbl-base td,
+    .tbl-base th{display:inlin-block; padding:0;border:0}
+    .type-inquiry td:nth-child(1){display:block; text-align: left;}
+    .type-inquiry td:nth-child(2){display:block; width:100%; text-align: left; margin-bottom:10px; font-size:16px;}
+    .type-inquiry td{color:rgb(185, 185, 185)}
+    .type-inquiry td{padding-right:10px}
 
+    .tbl-base .notify td.subject{padding-left:25px;}
+    .tbl-base td.subject{padding:0}
 }
 @media (max-width:600px) {
     /* 회원가입 */
@@ -608,7 +629,7 @@
     .content-item-group .content-item .content-data {font-size:14px}
     .content-item-group .content-item .content-data .pay {font-size:16px}
     .content-item-group .content-item ~ .content-item {margin-top:4px}
-    .search-area.search-area {margin-bottom:0}
+    /* .search-area.search-area {margin-bottom:0} */
     .box-list-a {margin-top:50px}
     .content-item-group .content-item-btn {text-align:center}
     .content-item-btn button {font-size:15px}
