--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -365,6 +365,10 @@
 .agree-area .agree-content {-webkit-transition:all .2s ease-out;transition:all .2s ease-out;height:0;overflow:hidden}
 .agree-area .active .agree-content {margin-top:12px;background-color:#e2e2e2;padding:30px 24px;height:auto;max-height:400px;overflow-y:auto;-webkit-overflow-scrolling:touch}
 
+/* 아이디/비밀번호 */
+.top-txt {padding:50px 24px 30px}
+.top-txt .info-txt {font-size:28px;line-height:40px;word-break:keep-all;text-align:center;font-weight:600;color:#000}
+
 /* terms */
 .terms-box .terms-tit-a {font-size:18px;color:#222;font-weight:500;line-height:24px}
 .terms-box .terms-tit-b {font-size:18px;margin-top:12px;font-weight:400;color:#222;line-height:24px}
