--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -514,7 +514,8 @@
 .btn-talk{height: 50px;background-color: #514635;border-radius: 25px;color: #fff;font-size: 20px;font-weight: 400;display: inline-block;padding: 0 20px;line-height: 48px; position:absolute; bottom:0; left:50%; transform: translate(-50%, 0);}
 .btn-talk::before{content:""; display:inline-block; width:30px; height:30px; background:url(../../resources/images/common/ico-talk.png) no-repeat 0 0 / cover; vertical-align: middle;}
 .box-btns {position:relative}
-.box-btns .leave {position:absolute;left:24px;top:12px}
+.box-btns .leave {position:absolute;right:24px;top:12px}
+.box-btns .link-join .link-txt {font-size:18px}
 
 
 .paging{position:relative; width:100%; margin:30px auto; text-align: center; }
