--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -151,6 +151,8 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .btn-type-d {height:54px;background-color:#ababad;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
 .btn-type-e {height:54px;background-color:#ababad;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
 .btn-type-f {height:54px;background-color:#c39863;border-radius:8px;color:#fff;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:54px}
+.btn-type-g {height:54px;background-color:#fff;border-radius:8px;color:#514635;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:52px;border:1px solid #514635}
+.btn-type-h {height:54px;background-color:#fff;border-radius:8px;color:#ababad;font-size:18px;font-weight:400;display:inline-block;padding:0 20px;line-height:52px;border:1px solid #ababad}
 
 /* side nav */
 .sticky .btn-top {opacity:1}
