--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -656,7 +656,7 @@
     .content-item-btn .btn-talk::before {width:24px;height:24px;position:relative;top:-2px;margin-right:2px}
     .box-btns .leave {position:static;margin:20px 24px 0;border-top:1px dashed #ddd;padding-top:12px;text-align:right}
     .btn-area-a {display:flex;padding:0 24px}
-    .btn-area-a [class^="btn-type-"] {min-width:1px;flex:1}
+    .btn-area-a [class^="btn-type-"] {min-width:1px;flex:1;padding:0}
     .btn-area-a [class^="btn-type-"] ~ [class^="btn-type-"] {margin-left:6px}
 
     /* 아이디/비밀번호 */
