--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -88,10 +88,10 @@
 /* 결제하기 */
 .type-payment .ui-modal-wrap{border-radius:30px; overflow: hidden;}
 .ui-modal.type-payment.ready.open.current:after{background:rgba(0,0,0,0.7)}
-.ui-modal.type-payment .ui-modal-header{position:relative;  background:#292a2e; color:#fff; padding:60px 0 30px;}
+.ui-modal.type-payment .ui-modal-header{position:relative;  background:#292a2e; color:#fff; padding:30px 0 30px;}
 .type-payment .ui-modal-wrap{background:transparent; width:740px;}
-.payment-top{margin:0 auto; overflow:hidden; display:flex; width:550px;}
-.payment-top .face{width:160px; text-align: center;}
+.payment-top{margin:0 auto; overflow:hidden; display:flex; width:600px;}
+.payment-top .face{width:160px; text-align: center; margin-right:10px;}
 .payment-top .face img{display:block; margin:0 auto;}
 .payment-top .face span{display:block; width:100%; color:#b7b7b8; font-size:15px; margin-top:5px;}
 .payment-top .info{width:auto;}
