--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -210,7 +210,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .file-img img{width:100%; margin-top:10px}
 .file-img .del{width:30px; height:30px; background: url(../../resources/images/common/file-del.png) no-repeat 0 0 / cover; position:absolute; top:10px; right:-35px;}
 
-
-
+/* margin */
+.mgt-a {margin-top:120px !important}
 
 
