--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -309,6 +309,7 @@
 
 /* sub title */
 .title-group{width:100%; position: relative; padding-left:20px; min-height:200px; margin-bottom:90px}
+.title-group.type-my {margin-bottom:50px}
 .title-group .face{display: inline-block; vertical-align: middle; width:90px; margin-top:0}
 .title-group .face img{width:100%;}
 .title-group h2{font-size:70px; color:#fff; font-weight:100; margin-bottom:4px;}
