--- a/resources/css/ui.common.css
+++ b/resources/css/ui.common.css
@@ -193,7 +193,7 @@ body.page-sub{background:#eee url('../../resources/images/common/bg-top-sub.jpg'
 .box-radio-group .radio-item .radio-label {font-size:18px;display:flex;align-items:center;justify-content:center;height:100%;background-color:#fff}
 .box-radio-group .radio-item .in-radio:checked + .radio-label {background-color:#514635;color:#fff}
            
-.tbl-base{width:100%; max-width:1500px; background-color: #fff; border-radius: 30px;box-shadow: 10px 0 10px rgb(0 0 0 / 7%);padding: 0 40px ;}
+.tbl-base{width:100%; max-width:1500px; background-color: #fff; border-radius: 30px;box-shadow: 10px 0 10px rgba(0,0,0,.07);padding: 0 40px ;}
 .tbl-base table{table-layout: fixed; width:100%;}
 .tbl-base thead th{border-bottom:2px solid #000; padding:20px 0; font-size:24px; text-align: center;font-weight: 500;}
 .tbl-base tbody tr:first-child th,
