후기 리더 추가

--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -478,6 +478,7 @@
 .view-action .btn-round-a {display:inline-flex;justify-content:center;align-items:center}
 .view-action .btn-round-a i {margin-right:4px}
 .answer-area {margin-top:40px}
+.answer-area.write {border-top:1px solid #2e3036;padding-top:40px}
 .answer-area .answer-title-box {background-color:#eee;padding:12px 30px;border-radius:6px;display:flex;justify-content:space-between;align-items:center}
 .answer-area .answer-title {font-size:18px;color:#000;line-height:28px;font-weight:500}
 .answer-area .answer-content {padding:30px}
