--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -517,8 +517,10 @@
 /* tab link */
 .tab-link select{display:none}
 .tab-link{position:relative;margin:0 auto 30px;text-align:center}
-.tab-link a{font-size:24px;color:#fff;display:inline-block;padding:14px 40px 10px;background:#898989;border:2px solid #828282;font-weight:600;box-shadow:0 5px 10px rgba(0,0,0,.2);text-align: center;border-radius:35px;height:70px;margin:0 10px;text-shadow:0 1px 4px rgba(137,100,37,1)}
-.tab-link a.selected{border:2px solid #c7941a;background: linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352)}
+.tab-link a{font-size:24px;color:#fff;display:inline-block;padding:14px 40px 10px;background:#898989;border:2px solid #828282;font-weight:600;box-shadow:0 5px 10px rgba(0,0,0,.2);text-align: center;border-radius:35px;height:70px;margin:0 10px;text-shadow:0 1px 4px rgba(0,0,0,.5)}
+.tab-link a.selected,
+.tab-link a.selected:hover,
+.tab-link a.selected:focus {border:2px solid #c7941a;background: linear-gradient(-69deg,#e2a936, #a27623,#ae7f2d ,  #f5c75f 70%, #e6b352);text-shadow:0 1px 4px rgba(137,100,37,1)}
 .tab-link a:hover,
 .tab-link a:focus{background: linear-gradient(-44deg, #252525,#2a2a2a 40%, #3e3e3e, #3c3c3c);border-color:#828282;box-shadow:0 0 8px rgba(0,0,0,.1)}
 
@@ -543,7 +545,8 @@
 .courses-item-c .btn-gold.big{width:80%;max-width:545px}
 .courses-item-c .btn-gold.big:disabled::before{background: linear-gradient(-44deg, #633f00,#674100 40%, #a46d00, #925f00);border-color:#80590d;box-shadow:0 0 8px rgba(0,0,0,.9)}
 .ready .courses-item-c ol li{background:#dfdfdf !important;border-color:#dfdfdf !important;color:#fff !important}
-.ready .courses-item-c .btn-gold.big:disabled{background:#ababad !important;border-color:#ababad !important}
+.ready .courses-item-c .btn-gold.big:disabled {background:#ababad !important;border-color:#ababad !important}
+.ready .courses-item-c .btn-gold.big:disabled {text-shadow:0 1px 4px rgba(0,0,0,.4)}
 .ready .courses-item-c .btn-gold.big:disabled::before{display:none}
 .btn-talk{height: 50px;background-color: #514635;border-radius: 25px;color: #fff;font-size: 20px;font-weight: 400;display: inline-block;padding: 0 20px;line-height: 48px;width:100%}
 .btn-talk::before{content:"";display:inline-block;width:30px;height:30px;background:url(../../resources/images/common/ico-talk.png) no-repeat 0 0 / cover;vertical-align: middle}
