--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -470,6 +470,7 @@
 .view-area .view-contents .view-img-area {margin-top:30px}
 .view-area .view-contents .view-img-area img {max-width:300px;margin-right:15px}
 .view-area .writer-data {font-size:18px;color:#2c2d30;padding-left:20px;white-space:nowrap}
+.view-area .writer-data .box-star-area {margin-right:8px;display:inline-block}
 .view-area .writer-data .writer-id {font-weight:600}
 .view-area .writer-data [class^="write-"] {position:relative;padding-left:10px;margin-left:10px}
 .view-area .writer-data [class^="write-"]:before {content:'';display:block;position:absolute;left:0;top:50%;width:1px;height:10px;margin-top:-5px;background-color:#bcbab9}
@@ -477,6 +478,7 @@
 .view-action .btn-round-a ~ .btn-round-a {margin-left:10px}
 .view-action .btn-round-a {display:inline-flex;justify-content:center;align-items:center}
 .view-action .btn-round-a i {margin-right:4px}
+.view-area .view-title .subject {display:inline-block;border:1px solid #c39863;margin-right:4px;border-radius:4px;color:#c39863;font-size:16px;padding:0 8px;line-height:26px;height:28px;vertical-align:middle;font-weight:500}
 .answer-area {margin-top:40px}
 .answer-area.write {border-top:1px solid #2e3036;padding-top:40px}
 .answer-area .answer-title-box {background-color:#eee;padding:12px 30px;border-radius:6px;display:flex;justify-content:space-between;align-items:center}
