--- a/resources/css/ui.contents.css
+++ b/resources/css/ui.contents.css
@@ -417,6 +417,7 @@
 .form-item .input-a:-moz-placeholder {color:#bfbfbf;font-weight:300}
 .form-item .form-textarea {border:2px solid #eee;border-radius:8px;height:200px;width:100%;padding:12px;font-size:21px;font-weight:500;outline:none;color:#565656;box-sizing:border-box;resize:none}
 .form-item .box-safe {margin-left:8px;height:54px;padding:0 32px;font-size:18px;color:#222;border-radius:8px;text-align:center;line-height:54px;letter-spacing:4px;background-color:#eee;display:inline-block;font-weight:600}
+input[type='date'], input[type='time'] {-webkit-appearance:none}
 
 /* 마이페이지 */
 .box-list-a {max-width:1500px;margin:0 auto}
