--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -707,9 +707,9 @@
     .answer-area .answer-content {padding:12px}
     .answer-area .answer-content p {font-size:14px;line-height:20px}
 
-    .box-search-b .search-col-b .form-item .form-col-d {width:150px}
+    /*.box-search-b .search-col-b .form-item .form-col-d {width:150px}
     .box-search-b .search-col-b .form-item .form-col-d .input-a {width:150px}
-    .box-search-b .search-col-b .form-item .form-col-txt {width:auto}
+    .box-search-b .search-col-b .form-item .form-col-txt {width:auto}*/
 
     /* 아이디/비밀번호 */
     .top-txt .info-txt {font-size:14px;line-height:20px}
