--- a/resources/css/ui.responsive.css
+++ b/resources/css/ui.responsive.css
@@ -415,7 +415,7 @@
     .search-area .form-item .form-col-txt + [class^="form-col-"] {padding-left:0 !important}
     .box-search-b .search-col-b .form-item {table-layout:fixed;overflow:hidden}
     .box-search-b .search-col-b .form-item .form-col-d {width:calc((100% - 30px) / 2)}
-    .box-search-b .search-col-b .form-item .form-col-d input[type='date'] {min-width:150px}
+    .box-search-b .search-col-b .form-item .form-col-d input[type='date'] {min-width:150px;line-height:38px}
     .box-search-b .search-col-b .form-item .form-col-txt {width:30px}
     .box-search-b .search-col-b .form-item .input-a {min-width:100%;display:block;width:100%}
     .box-search-b .form-item .input-a::-webkit-input-placeholder {font-size:14px}
